@@ -1,18 +1,30 @@
 package com.project.x_ray.model;
 
+import org.springframework.beans.factory.annotation.Value;
+import org.springframework.stereotype.Component;
 import org.springframework.web.multipart.MultipartFile;
 import org.tensorflow.SavedModelBundle;
 import org.tensorflow.Session;
 import org.tensorflow.Tensor;
 import org.tensorflow.ndarray.StdArrays;
-import org.tensorflow.ndarray.buffer.FloatDataBuffer;
 import org.tensorflow.types.TFloat32;
 
 import javax.imageio.ImageIO;
 import java.awt.image.BufferedImage;
 import java.io.IOException;
 
+@Component
 public class XrayAnalyzer {
+
+    // Injecting the model path and tensor names from application.properties
+    @Value("${xray.model.path}")
+    private String modelPath;
+
+    @Value("${xray.model.input-name}")
+    private String inputTensorName;
+
+    @Value("${xray.model.output-name}")
+    private String outputTensorName;
 
     public String analyzeXray(MultipartFile file) {
         try {
@@ -24,6 +36,7 @@ public class XrayAnalyzer {
 
             BufferedImage resizedImage = new BufferedImage(targetWidth, targetHeight, BufferedImage.TYPE_INT_RGB);
             resizedImage.getGraphics().drawImage(img, 0, 0, targetWidth, targetHeight, null);
+            resizedImage.getGraphics().dispose();  // Ensure Graphics object is disposed
 
             // Prepare float array
             float[][][][] inputArray = new float[1][targetHeight][targetWidth][3]; // (batch_size, height, width, channels)
@@ -44,21 +57,23 @@ public class XrayAnalyzer {
             // Create tensor from array
             TFloat32 inputTensor = TFloat32.tensorOf(StdArrays.ndCopyOf(inputArray));
 
-            // Load model
-            try (SavedModelBundle model = SavedModelBundle.load("path_to_your_saved_model", "serve")) {
+            // Load the TensorFlow model using path and tensor names from properties
+            try (SavedModelBundle model = SavedModelBundle.load(modelPath, "serve")) {
                 Session session = model.session();
 
+                // Run inference
                 Tensor output = session.runner()
-                        .feed("your_input_tensor_name", inputTensor)
-                        .fetch("your_output_tensor_name")
+                        .feed(inputTensorName, inputTensor)  // Feed the input tensor
+                        .fetch(outputTensorName)            // Fetch the output tensor
                         .run()
-                        .getFirst();
+                        .get(0); // Get the result from the first output tensor
 
-                // Read output
-                float[][] outputArray = new float[1][1]; // Adjust shape based on your model
-                ((TFloat32) output).read((FloatDataBuffer) StdArrays.ndCopyOf(outputArray));
+                // Convert Tensor to float array
+                float[][] outputArray = new float[1][1]; // Adjust the shape based on your model's output shape
+                output.copyTo(outputArray); // Using copyTo to extract the values
 
-                return "Detection result: " + outputArray[0][0];
+                // Return the detection result
+                return "Detection result: " + outputArray[0][0];  // Display the first element from the output
             }
 
         } catch (IOException e) {
